--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" type="image/jpg" href="favicon.ico" />
     <style>
         body {
             align-items: center;
